# unbounded-rs

./: .gitignore  Cargo.toml  build  package-lock.json  package.json  run
crates/main/: Cargo.toml
crates/main/src/: main.rs
crates/main/src/service/: mod.rs  router.rs
crates/root/: Cargo.toml
crates/root/src/: lib.rs
crates/root/src/config/: mod.rs
crates/root/src/init/: mod.rs
crates/root/src/net/: mod.rs
crates/root/src/service/: mod.rs  router.rs  user.rs
crates/root/src/start/: mod.rs
crates/root/src/user/: mod.rs
crates/root/src/util/: mod.rs
crates/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/web/src/: App.vue  main.ts
crates/web/src/router/: index.ts
crates/web/src/style/: index.scss
crates/web/src/view/Home/: Home.vue
crates/web/types/: node.env.d.ts  vue.d.ts
