[package]
name = "root"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
axum = { version = "0.6.20", features = ["ws"] }
once_cell = "1.18.0"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
tower-http = { version = "0.4.4", features = ["fs"] }
